[gd_scene load_steps=4 format=3 uid="uid://bx3egceyac28"]

[ext_resource type="Script" path="res://game/scenes/level_display/level_display.gd" id="1_mphe7"]
[ext_resource type="TileSet" uid="uid://danwtocvbryl5" path="res://game/resources/tile set/levels_tileset.tres" id="2_h4lt5"]
[ext_resource type="Script" path="res://game/scenes/level_display/enemies_path.gd" id="3_henll"]

[node name="LevelDisplay" type="Node2D"]
script = ExtResource("1_mphe7")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_h4lt5")
cell_quadrant_size = 32
format = 2
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(786440, 458752, 5, 720904, 458752, 5, 655368, 458752, 5, 589832, 458752, 5, 524296, 458752, 5, 786446, 458752, 5, 786445, 458752, 5, 786444, 458752, 5, 786443, 458752, 5, 786442, 458752, 5, 786441, 458752, 5, 589838, 458752, 5, 655374, 458752, 5, 720910, 458752, 5, 983054, 458752, 5, 917518, 458752, 5, 851982, 458752, 5, 983059, 458752, 5, 983058, 458752, 5, 983057, 458752, 5, 983056, 458752, 5, 983055, 458752, 5, 589844, 458752, 5, 589843, 458752, 5, 589842, 458752, 5, 589841, 458752, 5, 589840, 458752, 5, 589839, 458752, 5, 983060, 458752, 5, 917524, 458752, 5, 851988, 458752, 5, 786452, 458752, 5, 720916, 458752, 5, 655380, 458752, 5, 786454, 458752, 5, 786453, 458752, 5, 262166, 458752, 5, 327702, 458752, 5, 393238, 458752, 5, 458774, 458752, 5, 524310, 458752, 5, 589846, 458752, 5, 655382, 458752, 5, 720918, 458752, 5, 65558, 458752, 5, 131094, 458752, 5, 196630, 458752, 5, 65549, 458752, 5, 65550, 458752, 5, 65551, 458752, 5, 65552, 458752, 5, 65553, 458752, 5, 65554, 458752, 5, 65555, 458752, 5, 65556, 458752, 5, 65557, 458752, 5, 131085, 458752, 5, 524297, 458752, 5, 524298, 458752, 5, 524299, 458752, 5, 458763, 458752, 5, 393227, 458752, 5, 327691, 458752, 5, 327690, 458752, 5, 327689, 458752, 5, 327688, 458752, 5, 327687, 458752, 5, 327686, 458752, 5, 327685, 458752, 5, 1114121, 327680, 3, 1048585, 458752, 5, 983049, 458752, 5, 917513, 458752, 5, 851977, 458752, 5, 1114115, 327680, 3, 1114116, 327680, 3, 1114117, 327680, 3, 1114118, 327680, 3, 1114119, 327680, 3, 1114120, 327680, 3, 851971, 458752, 5, 917507, 458752, 5, 983043, 458752, 5, 1048579, 458752, 5, 917523, 458752, 5, 851987, 458752, 5, 786451, 458752, 5, 720915, 458752, 5, 655379, 458752, 5, 917522, 458752, 5, 851986, 458752, 5, 786450, 458752, 5, 720914, 458752, 5, 655378, 458752, 5, 917521, 458752, 5, 851985, 458752, 5, 786449, 458752, 5, 720913, 458752, 5, 655377, 458752, 5, 917520, 458752, 5, 851984, 458752, 5, 786448, 458752, 5, 720912, 458752, 5, 655376, 458752, 5, 917519, 458752, 5, 851983, 458752, 5, 786447, 458752, 5, 720911, 458752, 5, 655375, 458752, 5, 1114134, 327680, 3, 1048598, 458752, 5, 983062, 458752, 5, 917526, 458752, 5, 851990, 458752, 5, 1114133, 327680, 3, 1048597, 458752, 5, 983061, 458752, 5, 917525, 458752, 5, 851989, 458752, 5, 1114132, 327680, 3, 1048596, 458752, 5, 1114131, 327680, 3, 1048595, 458752, 5, 1114130, 327680, 3, 1048594, 458752, 5, 1114129, 327680, 3, 1048593, 458752, 5, 1114128, 327680, 3, 1048592, 458752, 5, 1114127, 327680, 3, 1048591, 458752, 5, 1114126, 327680, 3, 1048590, 458752, 5, 1114125, 327680, 3, 1048589, 458752, 5, 983053, 458752, 5, 917517, 458752, 5, 851981, 458752, 5, 1114124, 327680, 3, 1048588, 458752, 5, 983052, 458752, 5, 917516, 458752, 5, 851980, 458752, 5, 1114123, 327680, 3, 1048587, 458752, 5, 983051, 458752, 5, 917515, 458752, 5, 851979, 458752, 5, 1114122, 327680, 3, 1048586, 458752, 5, 983050, 458752, 5, 917514, 458752, 5, 851978, 458752, 5, 720917, 458752, 5, 655381, 458752, 5, 589845, 458752, 5, 524309, 458752, 5, 458773, 458752, 5, 393237, 458752, 5, 327701, 458752, 5, 262165, 458752, 5, 196629, 458752, 5, 131093, 458752, 5, 524308, 458752, 5, 458772, 458752, 5, 393236, 458752, 5, 327700, 458752, 5, 262164, 458752, 5, 196628, 458752, 5, 131092, 458752, 5, 524307, 458752, 5, 458771, 458752, 5, 393235, 458752, 5, 327699, 458752, 5, 262163, 458752, 5, 196627, 458752, 5, 131091, 458752, 5, 524306, 458752, 5, 458770, 458752, 5, 393234, 458752, 5, 327698, 458752, 5, 262162, 458752, 5, 196626, 458752, 5, 131090, 458752, 5, 524305, 458752, 5, 458769, 458752, 5, 393233, 458752, 5, 327697, 458752, 5, 262161, 458752, 5, 196625, 458752, 5, 131089, 458752, 5, 524304, 458752, 5, 458768, 458752, 5, 393232, 458752, 5, 327696, 458752, 5, 262160, 458752, 5, 196624, 458752, 5, 131088, 458752, 5, 524303, 458752, 5, 458767, 458752, 5, 393231, 458752, 5, 327695, 458752, 5, 262159, 458752, 5, 196623, 458752, 5, 131087, 458752, 5, 524302, 458752, 5, 458766, 458752, 5, 393230, 458752, 5, 327694, 458752, 5, 262158, 458752, 5, 196622, 458752, 5, 131086, 458752, 5, 720909, 458752, 5, 655373, 458752, 5, 589837, 458752, 5, 524301, 458752, 5, 458765, 458752, 5, 393229, 458752, 5, 327693, 458752, 5, 262157, 458752, 5, 196621, 458752, 5, 720908, 458752, 5, 655372, 458752, 5, 589836, 458752, 5, 524300, 458752, 5, 458764, 458752, 5, 393228, 458752, 5, 327692, 458752, 5, 262156, 458752, 5, 196620, 458752, 5, 131084, 458752, 5, 65548, 458752, 5, 720907, 458752, 5, 655371, 458752, 5, 589835, 458752, 5, 262155, 458752, 5, 196619, 458752, 5, 131083, 458752, 5, 65547, 458752, 5, 720906, 458752, 5, 655370, 458752, 5, 589834, 458752, 5, 458762, 458752, 5, 393226, 458752, 5, 262154, 458752, 5, 196618, 458752, 5, 131082, 458752, 5, 65546, 458752, 5, 720905, 458752, 5, 655369, 458752, 5, 589833, 458752, 5, 458761, 458752, 5, 393225, 458752, 5, 262153, 458752, 5, 196617, 458752, 5, 131081, 458752, 5, 65545, 458752, 5, 1048584, 458752, 5, 983048, 458752, 5, 917512, 458752, 5, 851976, 458752, 5, 458760, 458752, 5, 393224, 458752, 5, 262152, 458752, 5, 196616, 458752, 5, 131080, 458752, 5, 65544, 458752, 5, 1048583, 458752, 5, 983047, 458752, 5, 917511, 458752, 5, 851975, 458752, 5, 786439, 458752, 5, 720903, 458752, 5, 655367, 458752, 5, 589831, 458752, 5, 524295, 458752, 5, 458759, 458752, 5, 393223, 458752, 5, 262151, 458752, 5, 196615, 458752, 5, 131079, 458752, 5, 65543, 458752, 5, 1048582, 458752, 5, 983046, 458752, 5, 917510, 458752, 5, 851974, 458752, 5, 786438, 458752, 5, 720902, 458752, 5, 655366, 458752, 5, 589830, 458752, 5, 524294, 458752, 5, 458758, 458752, 5, 393222, 458752, 5, 262150, 458752, 5, 196614, 458752, 5, 131078, 458752, 5, 65542, 458752, 5, 1048581, 458752, 5, 983045, 458752, 5, 917509, 458752, 5, 851973, 458752, 5, 786437, 458752, 5, 720901, 458752, 5, 655365, 458752, 5, 589829, 458752, 5, 524293, 458752, 5, 458757, 458752, 5, 393221, 458752, 5, 262149, 458752, 5, 196613, 458752, 5, 131077, 458752, 5, 65541, 458752, 5, 1048580, 458752, 5, 983044, 458752, 5, 917508, 458752, 5, 851972, 458752, 5, 786436, 458752, 5, 720900, 458752, 5, 655364, 458752, 5, 589828, 458752, 5, 524292, 458752, 5, 458756, 458752, 5, 393220, 458752, 5, 327684, 458752, 5, 262148, 458752, 5, 196612, 458752, 5, 131076, 458752, 5, 65540, 458752, 5, 786435, 458752, 5, 720899, 458752, 5, 655363, 458752, 5, 589827, 458752, 5, 524291, 458752, 5, 458755, 458752, 5, 393219, 458752, 5, 327683, 458752, 5, 262147, 458752, 5, 196611, 458752, 5, 131075, 458752, 5, 65539, 458752, 5, 1114143, 458752, 4, 1048607, 327680, 2, 983071, 327680, 2, 917535, 327680, 2, 851999, 327680, 2, 786463, 327680, 2, 720927, 327680, 2, 655391, 327680, 2, 589855, 327680, 2, 524319, 327680, 2, 458783, 327680, 2, 393247, 327680, 2, 327711, 327680, 2, 262175, 327680, 2, 196639, 327680, 2, 131103, 327680, 2, 65567, 327680, 2, 31, 458752, 3, 1114142, 327680, 3, 1048606, 458752, 5, 983070, 458752, 5, 917534, 458752, 5, 851998, 458752, 5, 786462, 458752, 5, 720926, 458752, 5, 655390, 458752, 5, 589854, 458752, 5, 524318, 458752, 5, 458782, 458752, 5, 393246, 458752, 5, 327710, 458752, 5, 262174, 458752, 5, 196638, 458752, 5, 131102, 458752, 5, 65566, 458752, 5, 30, 262144, 3, 1114141, 327680, 3, 1048605, 458752, 5, 983069, 458752, 5, 917533, 458752, 5, 851997, 458752, 5, 786461, 458752, 5, 720925, 458752, 5, 655389, 458752, 5, 589853, 458752, 5, 524317, 458752, 5, 458781, 458752, 5, 393245, 458752, 5, 327709, 458752, 5, 262173, 458752, 5, 196637, 458752, 5, 131101, 458752, 5, 65565, 458752, 5, 29, 262144, 3, 1114140, 327680, 3, 1048604, 458752, 5, 983068, 458752, 5, 917532, 458752, 5, 851996, 458752, 5, 786460, 458752, 5, 720924, 458752, 5, 655388, 458752, 5, 589852, 458752, 5, 524316, 458752, 5, 458780, 458752, 5, 393244, 458752, 5, 327708, 458752, 5, 262172, 458752, 5, 196636, 458752, 5, 131100, 458752, 5, 65564, 458752, 5, 28, 262144, 3, 1114139, 327680, 3, 1048603, 458752, 5, 983067, 458752, 5, 917531, 458752, 5, 851995, 458752, 5, 786459, 458752, 5, 720923, 458752, 5, 655387, 458752, 5, 589851, 458752, 5, 524315, 458752, 5, 458779, 458752, 5, 393243, 458752, 5, 327707, 458752, 5, 262171, 458752, 5, 196635, 458752, 5, 131099, 458752, 5, 65563, 458752, 5, 27, 262144, 3, 1114138, 327680, 3, 1048602, 458752, 5, 983066, 458752, 5, 917530, 458752, 5, 851994, 458752, 5, 786458, 458752, 5, 720922, 458752, 5, 655386, 458752, 5, 589850, 458752, 5, 524314, 458752, 5, 458778, 458752, 5, 393242, 458752, 5, 327706, 458752, 5, 262170, 458752, 5, 196634, 458752, 5, 131098, 458752, 5, 65562, 458752, 5, 26, 262144, 3, 1114137, 327680, 3, 1048601, 458752, 5, 983065, 458752, 5, 917529, 458752, 5, 851993, 458752, 5, 786457, 458752, 5, 720921, 458752, 5, 655385, 458752, 5, 589849, 458752, 5, 524313, 458752, 5, 458777, 458752, 5, 393241, 458752, 5, 327705, 458752, 5, 262169, 458752, 5, 196633, 458752, 5, 131097, 458752, 5, 65561, 458752, 5, 25, 262144, 3, 1114136, 327680, 3, 1048600, 458752, 5, 983064, 458752, 5, 917528, 458752, 5, 851992, 458752, 5, 786456, 458752, 5, 720920, 458752, 5, 655384, 458752, 5, 589848, 458752, 5, 524312, 458752, 5, 458776, 458752, 5, 393240, 458752, 5, 327704, 458752, 5, 262168, 458752, 5, 196632, 458752, 5, 131096, 458752, 5, 65560, 458752, 5, 24, 262144, 3, 1114135, 327680, 3, 1048599, 458752, 5, 983063, 458752, 5, 917527, 458752, 5, 851991, 458752, 5, 786455, 458752, 5, 720919, 458752, 5, 655383, 458752, 5, 589847, 458752, 5, 524311, 458752, 5, 458775, 458752, 5, 393239, 458752, 5, 327703, 458752, 5, 262167, 458752, 5, 196631, 458752, 5, 131095, 458752, 5, 65559, 458752, 5, 23, 262144, 3, 22, 262144, 3, 21, 262144, 3, 20, 262144, 3, 19, 262144, 3, 18, 262144, 3, 17, 262144, 3, 16, 262144, 3, 15, 262144, 3, 14, 262144, 3, 13, 262144, 3, 12, 262144, 3, 11, 262144, 3, 10, 262144, 3, 9, 262144, 3, 8, 262144, 3, 7, 262144, 3, 6, 262144, 3, 5, 262144, 3, 4, 262144, 3, 3, 262144, 3, 2, 262144, 3, 1, 262144, 3, 0, 458752, 1, 786434, 458752, 5, 720898, 458752, 5, 655362, 458752, 5, 589826, 458752, 5, 524290, 458752, 5, 458754, 458752, 5, 393218, 458752, 5, 327682, 458752, 5, 262146, 458752, 5, 196610, 458752, 5, 131074, 458752, 5, 65538, 458752, 5, 524289, 458752, 5, 458753, 458752, 5, 393217, 458752, 5, 327681, 458752, 5, 262145, 458752, 5, 196609, 458752, 5, 131073, 458752, 5, 65537, 458752, 5, 786432, 262144, 2, 720896, 262144, 2, 655360, 262144, 2, 589824, 262144, 2, 524288, 262144, 2, 458752, 262144, 2, 393216, 262144, 2, 327680, 262144, 2, 262144, 262144, 2, 196608, 262144, 2, 131072, 262144, 2, 65536, 262144, 2, 1114114, 327680, 3, 1048578, 458752, 5, 983042, 458752, 5, 917506, 458752, 5, 851970, 458752, 5, 1114113, 327680, 3, 1048577, 458752, 5, 983041, 458752, 5, 917505, 458752, 5, 851969, 458752, 5, 1114112, 458752, 2, 1048576, 262144, 2, 983040, 262144, 2, 917504, 262144, 2, 851968, 262144, 2, 786433, 458752, 5, 720897, 458752, 5, 655361, 458752, 5, 589825, 458752, 5, -1, 1, 0, 65535, 131073, 0, 131071, 131073, 0, 196607, 131073, 0, 262143, 131073, 0, 327679, 131073, 0, 393215, 131073, 0, 1245183, 1, 1, 1179647, 131073, 0, 1114111, 131073, 0, 1048575, 131073, 0, 983039, 131073, 0, 917503, 131073, 0, 851967, 131073, 0, 786431, 131073, 0, 720895, 131073, 0, 655359, 131073, 0, 589823, 131073, 0, 524287, 131073, 0, 458751, 131073, 0, 1179680, 65537, 1, 1179679, 131073, 1, 1179678, 131073, 1, 1179677, 131073, 1, 1179676, 131073, 1, 1179675, 131073, 1, 1179674, 131073, 1, 1179673, 131073, 1, 1179672, 131073, 1, 1179671, 131073, 1, 1179670, 131073, 1, 1179669, 131073, 1, 1179668, 131073, 1, 1179667, 131073, 1, 1179666, 131073, 1, 1179665, 131073, 1, 1179664, 131073, 1, 1179663, 131073, 1, 1179662, 131073, 1, 1179661, 131073, 1, 1179660, 131073, 1, 1179659, 131073, 1, 1179658, 131073, 1, 1179657, 131073, 1, 1179656, 131073, 1, 1179655, 131073, 1, 1179654, 131073, 1, 1179653, 131073, 1, 1179652, 131073, 1, 1179651, 131073, 1, 1179650, 131073, 1, 1179649, 131073, 1, 1179648, 131073, 1, -65504, 65537, 0, 32, 131073, 0, 65568, 131073, 0, 131104, 131073, 0, 196640, 131073, 0, 262176, 131073, 0, 327712, 131073, 0, 393248, 131073, 0, 458784, 131073, 0, 524320, 131073, 0, 589856, 131073, 0, 655392, 131073, 0, 720928, 131073, 0, 786464, 131073, 0, 852000, 131073, 0, 917536, 131073, 0, 983072, 131073, 0, 1048608, 131073, 0, 1114144, 131073, 0, -65536, 131073, 1, -65535, 131073, 1, -65534, 131073, 1, -65533, 131073, 1, -65532, 131073, 1, -65531, 131073, 1, -65530, 131073, 1, -65529, 131073, 1, -65528, 131073, 1, -65527, 131073, 1, -65526, 131073, 1, -65525, 131073, 1, -65524, 131073, 1, -65523, 131073, 1, -65522, 131073, 1, -65521, 131073, 1, -65520, 131073, 1, -65519, 131073, 1, -65518, 131073, 1, -65517, 131073, 1, -65516, 131073, 1, -65515, 131073, 1, -65514, 131073, 1, -65513, 131073, 1, -65512, 131073, 1, -65511, 131073, 1, -65510, 131073, 1, -65509, 131073, 1, -65508, 131073, 1, -65507, 131073, 1, -65506, 131073, 1, -65505, 131073, 1)
layer_1/name = "road"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()
layer_2/name = "wall"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
layer_3/name = "portals"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array()

[node name="EnemiesPath2D" type="Path2D" parent="."]
script = ExtResource("3_henll")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="WaveRecharge" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1681.0
offset_top = 962.0
offset_right = 1904.0
offset_bottom = 1065.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Wave"

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="WaveRecharge" to="." method="_on_wave_recharge_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_start_wave_pressed"]
